<resources>
    <string name="app_name">YiIM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="account_name">创忆</string>
    <string name="account_signature">携手共创忆，与梦同飞扬。</string>
    <string name="err_empty_nick_name">昵称不能为空!</string>
    <string name="err_empty_user_name">账号不能为空!</string>
    <string name="err_transfer_file">文件传输错误!</string>
    <string name="err_empty_memo">备注不能为空!</string>
    <string name="err_not_modify_memo">备注未改变!</string>
    <string name="err_not_modify_nick_name">昵称未改变!</string>
    <string name="err_not_modify_sign">个性签名未改变!</string>
    <string name="err_not_modify_country_and_province">国家和地区(省)均未改变!</string>
    <string name="err_empty_passwd">密码不能为空!</string>
    <string name="err_empty_confirm_passwd">确认密码不能为空!</string>
    <string name="err_noteq_passwd">两次输入密码不一致!</string>
    <string name="err_empty_birthday">出生年月不能为空!</string>
    <string name="err_illegal_username">用户名非法，至少五位的小写字母或数字!</string>
    <string name="err_empty_country">国家不能为空!</string>
    <string name="err_empty_province">地区(省)不能为空!</string>
    <string name="err_empty_search_content">搜索内容不能为空!</string>
    <string name="err_entry_add_requested">添加好友请求己发出!</string>
    <string name="err_init_failed">初始化失败!</string>
    <string name="err_entry_add_failed">添加好友失败!</string>
    <string name="err_login_failed">登录失败!</string>
    <string name="err_entry_delete_failed">删除好友失败!</string>
    <string name="tip_register">您的ID为：%1$s，请您牢记!</string>
    <string name="tip_clear_chat_record">您确定要清空所有的聊天记录吗?</string>
    <string name="tip_clear_conversation">您确定要清空所有的会话记录吗?</string>
    <string name="str_back">返回</string>
    <string name="str_find_groups">查找房间</string>
    <string name="str_exit">退出</string>
    <string name="str_login">登录</string>
    <string name="str_my_friend">我的好友</string>
    <string name="str_loading_init">正在初始化&#8230;</string>
    <string name="str_register">注册</string>
    <string name="str_submit">提交</string>
    <string name="str_title">标题</string>
    <string name="str_quit">退出</string>
    <string name="str_chats">会话</string>
    <string name="str_groups">房间</string>
    <string name="str_about">关于</string>
    <string name="str_finish">完成</string>
    <string name="str_create">创建</string>
    <string name="str_group_name_hint">请输入分组名称</string>
    <string name="err_empty_group_name">分组名称不能为空</string>
    <string name="err_add_group_name_failed">添加好友失败</string>
    <string name="err_del_group_failed">删除分组失败</string>
    <string name="err_rename_group_failed">重命名分组失败</string>
    <string name="err_rename_group_default">默认分组不可重命名！</string>
    <string name="err_del_group_default">默认分组不可删除！</string>
    <string name="err_send_msg_failed">发送消息失败！</string>
    <string name="err_send_msg_failed_no_network">发送消息失败，没有网络！</string>
    <string name="str_del_group_tip">分组内好友将移动至默认分组，您确定要删除分组?</string>
    <string name="err_modify_group_failed">变更分组失败，请检查网络是否连接正常</string>
    <string name="err_multi_group_name">分组已经存在</string>
    <string name="str_add_group">添加分组</string>
    <string name="str_rename_group">重命名分组</string>
    <string name="str_modify_group_title">分组变更</string>
    <string name="str_friends">好友</string>
    <string name="str_settings">设置</string>
    <string name="str_contacts">联系人</string>
    <string name="str_tip">提示</string>
    <string name="str_search">搜索</string>
    <string name="str_find">查找</string>
    <string name="str_friend_find_hint">用户名精确查找</string>
    <string name="str_room_find_hint">房间名精确查找</string>
    <string name="str_save">保存</string>
    <string name="str_save_success">保存成功</string>
    <string name="str_modify_nickname">更改昵称</string>
    <string name="str_modify_district">更改地区</string>
    <string name="str_modify_sign">修改个性签名</string>
    <string name="str_modify_memo">修改备注</string>
    <string name="str_entry_add_agree">同意，并添加对方为好友</string>
    <string name="str_room_add_agree">同意加入房间</string>
    <string name="str_entry_add_req">确定要添加对方为好友吗？</string>
    <string name="str_entry_delete_req">你确定要将%1$s删除吗？</string>
    <string name="str_room_delete_req">你确定要删除[%1$s]房间吗？</string>
    <string name="str_conversation_delete_req">你确定要删除这条会话吗？</string>
    <string name="str_loading">正在加载&#8230;</string>
    <string name="str_logining">正在登录&#8230;</string>
    <string name="str_ok">确定</string>
    <string name="str_clear_chat_record_confirm">您确定要清除聊天记录吗?</string>
    <string name="str_cancel">取消</string>
    <string name="str_choise_op">请选择要进行的操作</string>
    <string name="str_re_auth">重新请求认证</string>
    <string name="str_delete_friend">删除好友</string>
    <string name="str_hint_login">请输入账号</string>
    <string name="str_hint_passwd">请输入密码</string>
    <string name="str_remember_pwd">记住密码</string>
    <string name="str_auto_login">自动登录</string>
    <string name="str_hint_nick_name">请输入昵称</string>
    <string name="str_hint_user_name">请输入用户名</string>
    <string name="str_hint_passwd_confirm">请输入确认密码</string>
    <string name="str_hint_select_birthday">请选择出生年月</string>
    <string name="str_hint_email">name@sample.com</string>
    <string name="str_hint_user_sign">请输入个性签名</string>
    <string name="str_hint_district">请输入地区</string>
    <string name="str_hint_room_name">请输入房间名称</string>
    <string name="err_empty_room_name">房间名称不能为空!</string>
    <string name="str_hint_room_sign">请输入房间个性签名</string>
    <string name="err_empty_room_sign">房间个性签名不能为空!</string>
    <string name="err_create_room_failed">创建房间失败!</string>
    <string name="err_delete_room_failed">删除房间失败!</string>
    <string name="err_join_invite_room_failed">房间可能已不存在！</string>
    <string name="err_create_room_success">创建房间成功!</string>
    <string name="err_create_room_failed_exist">创建房间失败，房间已存在!</string>
    <string name="str_pre_hint_login">使用YiIM号登录</string>
    <string name="str_pre_hint_register">如果你没有YiIM号，请注册</string>
    <string name="str_forget_passwd">忘记密码?</string>
    <string name="input_lab_nick_name">昵称：</string>
    <string name="input_lab_room_name">房间名称：</string>
    <string name="input_lab_room_sign">房间签名：</string>
    <string name="str_invite_friend">邀请好友</string>
    <string name="input_lab_user_name">用户名：</string>
    <string name="input_lab_user_icon">头像：</string>
    <string name="input_lab_passwd">密码：</string>
    <string name="input_lab_mm_no">YiIM号：</string>
    <string name="input_lab_user_sign">个性签名：</string>
    <string name="input_lab_passwd_confirm">确认密码：</string>
    <string name="input_lab_email">邮箱：</string>
    <string name="input_lab_sex">性别：</string>
    <string name="input_lab_birthday">出生年月：</string>
    <string name="input_lab_contry">国家：</string>
    <string name="input_lab_district">地区：</string>
    <string name="input_lab_province">地区(省)：</string>
    <string name="input_lab_memo">备注：</string>
    <string name="input_lab_sign">个性签名：</string>
    <string name="str_modify_group">移动至分组</string>
    <string name="str_view_group_member">查看在线成员</string>
    <string name="input_lab_gallery">个人相册：</string>
    <string name="str_male">男</string>
    <string name="str_female">女</string>
    <string name="str_required">必填</string>
    <string name="str_optional">选填</string>
    <string name="str_yes">是</string>
    <string name="str_no">否</string>
    <string name="str_conversation_tip">请左右滑动，会有惊喜哦！</string>
    <string name="str_send">发送</string>
    <string name="str_voice_press">按住 说话</string>
    <string name="str_voice_up">松开 结束</string>
    <string name="chatfooter_too_short">录音时间太短</string>
    <string name="chatfooter_cancel_rcd">手指上滑，取消传送</string>
    <string name="chatfooter_cancel_rcd_release">松开手指，取消传送</string>
    <string name="str_before">前</string>
    <string name="str_after">后</string>
    <string name="str_hour">小时</string>
    <string name="str_personal_info">个人信息</string>
    <string name="str_tomorrow">明天</string>
    <string name="str_day_after_tomorrow">后天</string>
    <string name="str_yesterday">昨天</string>
    <string name="str_day_before_yesterday">前天</string>
    <string name="str_month">月</string>
    <string name="str_date_day">日</string>
    <string name="str_day">天</string>
    <string name="str_minute">分钟</string>
    <string name="str_second">秒</string>
    <string name="str_user_info">详细资料</string>
    <string name="str_not_certified">未认证</string>
    <string name="str_online">在线</string>
    <string name="str_unavailable">离线</string>
    <string name="str_add_contact">添加好友</string>
    <string name="str_group_manager">分组管理</string>
    <string name="str_friend_search">搜索好友</string>
    <string name="str_search_contact">附近的人</string>
    <string name="str_exit_confirm">退出后，你将收不到新的消息.确定要退出？</string>
    <string name="string_call_terminated">通话中断</string>
    <string name="string_incall">正在通话</string>
    <string name="string_call_incoming">请求通话</string>
    <string name="string_call_outgoing">发起通话</string>
    <string name="string_call_cancelled">通话取消</string>
    <string name="str_audio_call">语音通话</string>
    <string name="str_audiovideo_call">视频通话</string>
    <string name="title_activity_call_queue">语音/视频通话列表</string>
    <string name="nearby_people">附近的人</string>
    <string name="nearby_people_distance">%1$s米以内</string>
    <string name="err_unknown">未知错误</string>
    <string name="string_answer">接听</string>
    <string name="string_endcall">结束通话</string>
    <string name="string_speaker_on">打开扬声器</string>
    <string name="string_speaker_off">关闭扬声器</string>
    <string name="string_mute_on">静音</string>
    <string name="string_mute_off">取消静音</string>
    <string name="string_hold">保持</string>
    <string name="string_resume">恢复</string>
    <string name="string_send_video">发送视频</string>
    <string name="string_stop_video">停止视频</string>
    <string name="string_switch_camera">切换摄像头</string>
    <string name="str_start">开始</string>
    <string name="str_take_photo">拍照</string>
    <string name="str_send_msg">发消息</string>
    <string name="str_emotion">表情</string>
    <string name="str_image">图片</string>
    <string name="str_video">视频</string>
    <string name="str_video_chat">视频通话</string>
    <string name="str_voice_chat">语音通话</string>
    <string name="str_exit_login">注销登录</string>
    <string name="str_add_friend">添加朋友</string>
    <string name="str_emoji">大表情</string>
    <string name="str_emoji_classical">经典</string>
    <string name="str_shake">摇一摇</string>
    <string name="str_held">已保持</string>
    <string name="str_add_as_friend">加为好友</string>
    <string name="str_memo">备注名</string>
    <string name="str_delete">删除</string>
    <string name="str_clear_conversation">清空所有会话记录</string>
    <string name="str_clear_all_chat_record">清空所有聊天记录</string>
    <string name="str_clear_chat_record">清空聊天记录</string>
    <string name="str_view_chat_record">查看聊天记录</string>
    <string name="str_pick_local_photo">选择本地图片</string>
    <string name="tip_nick_edit">好名字可以让你的朋友更容易记住你</string>
    <string name="tip_join_multi_room">您确定要加入该房间吗?</string>
    <string name="tip_join_multi_room_success">加入房间成功</string>
    <string name="err_join_multi_room_twice">已经加入该房间</string>
    <string name="err_join_multi_room_failed">加入房间失败!</string>
    <string name="tip_exit_login">退出后不会删除任何历史数据，下次\n登录依然可以使用本帐号</string>
    <string name="title_activity_custom_title">CustomTitleActivity</string>
    <string name="err_no_network">网络未连接</string>
    <string name="err_null_request_packet">不能发送空的请求</string>
    <string name="err_no_sdcard">没有SD卡</string>
    <string name="err_net_no_response">服务器没有响应，请检查网络</string>
    <string name="err_no_connect_to_server">无法连接到服务器</string>
    <string name="err_register_failed">注册失败</string>
    <string name="str_register_success">注册成功</string>
    <string name="str_login_success">登录成功</string>
    <string name="str_entry_add_request">想添加您为好友</string>
    <string name="str_room_add_request">邀请您加入[%1$s]房间</string>
    <string name="str_entry_add_accept">已同意您的好友请求</string>
</resources>