<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/exit_dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/user_info_title_add_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_style_alert_dialog_button"
        android:gravity="center"
        android:text="@string/str_add_as_friend"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/user_info_title_add_memo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/btn_style_alert_dialog_button"
        android:gravity="center"
        android:text="@string/str_memo"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/user_info_title_delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/btn_style_alert_dialog_special"
        android:gravity="center"
        android:text="@string/str_delete"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/user_info_title_btn_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/btn_style_alert_dialog_cancel"
        android:gravity="center"
        android:text="@string/str_cancel"
        android:textColor="#fff"
        android:textSize="18sp" />

</LinearLayout>