<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/exit_dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_style_alert_dialog_button"
        android:gravity="center"
        android:onClick="exitbutton0"
        android:text="@string/str_take_photo"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/btn_style_alert_dialog_button"
        android:gravity="center"
        android:onClick="exitbutton0"
        android:text="@string/str_pick_local_photo"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/btn_style_alert_dialog_cancel"
        android:gravity="center"
        android:text="@string/str_cancel"
        android:textColor="#fff"
        android:textSize="18sp" />

</LinearLayout>